opam-version: "2.0"
name: "ladspa"
version: "0.1.6"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-ladspa"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix] {os != "macos"}
  [
    "./configure"
    "CFLAGS=-I/usr/local/include"
    "LDFLAGS=-L/usr/local/lib"
    "OCAMLFLAGS=-ccopt -I/usr/local/include -cclib -L/usr/local/lib"
    "--prefix"
    prefix
  ] {os = "macos"}
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
]
depexts: [
  ["ladspa-dev"] {os-distribution = "alpine"}
  ["ladspa-devel"] {os-distribution = "centos"}
  ["ladspa-devel"] {os-distribution = "fedora"}
  ["ladspa-devel"] {os-family = "suse"}
  ["ladspa-sdk"] {os-family = "debian"}
  ["drfill/liquidsoap/ladspa_header"]
    {os = "macos" & os-distribution = "homebrew"}
]
bug-reports: "https://github.com/savonet/ocaml-ladspa/issues"
dev-repo: "git+https://github.com/savonet/ocaml-ladspa.git"
synopsis: "Bindings for the LADSPA API which provides audio effects"
